IDEA自动代码清理