@@ -11,9 +11,7 @@ import net.onixary.shapeShifterCurseFabric.integration.origins.origin.OriginLaye
 import net.onixary.shapeShifterCurseFabric.integration.origins.origin.OriginLayers;
 import net.onixary.shapeShifterCurseFabric.integration.origins.origin.OriginRegistry;
 import net.onixary.shapeShifterCurseFabric.integration.origins.registry.ModComponents;
-import net.onixary.shapeShifterCurseFabric.networking.ModPacketsS2CServer;
 import net.onixary.shapeShifterCurseFabric.player_animation.v3.AnimUtils;
-import net.onixary.shapeShifterCurseFabric.player_form.ability.RegPlayerFormComponent;
 import net.onixary.shapeShifterCurseFabric.util.TrinketUtils;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
@@ -24,18 +22,21 @@ import java.util.Set;
 import java.util.function.Predicate;
 
 public class FormUtils {
-    public static class FlagData {
-        public final String flag;
-        public FlagData(String flag) { this.flag = flag; }
-        public String getFlag() { return flag; }
-        public boolean hasFlag(IForm form) { return form.getFormFlag().contains(flag); }
-        public Set<String> appendFlag(Set<String> oldFlag) {
-            Set<String> newSet = new HashSet<>(oldFlag);
-            newSet.add(flag);
-            return Set.copyOf(newSet);
-        }
-        public Predicate<IForm> hasFlag() { return form -> form.getFormFlag().contains(flag); }
-    }
+	public record FlagData(String flag) {
+		public boolean hasFlag(IForm form) {
+			return form.getFormFlag().contains(flag);
+		}
+
+		public Set<String> appendFlag(Set<String> oldFlag) {
+			Set<String> newSet = new HashSet<>(oldFlag);
+			newSet.add(flag);
+			return Set.copyOf(newSet);
+		}
+
+		public Predicate<IForm> hasFlag() {
+			return form -> form.getFormFlag().contains(flag);
+		}
+	}
 
     public static final FlagData HasSlowFall = new FlagData("slow_fall"); // 给动画系统用的 替代hasSlowFall函数
     public static final FlagData NoInstinct = new FlagData("no_instinct"); // 禁用本能系统(条消失) 给sp 开书前后 最终形态用
@@ -48,7 +49,7 @@ public class FormUtils {
     public static Set<String> buildFormFlag(FlagData... flags) {
         Set<String> flagSet = new HashSet<>();
         for (FlagData flag : flags) {
-            flagSet.add(flag.getFlag());
+            flagSet.add(flag.flag());
         }
         return Set.copyOf(flagSet);
     }
@@ -74,7 +75,7 @@ public class FormUtils {
 
     public static @Nullable IForm getPrevForm(PlayerEntity player) {
         List<IForm> formHistory = getPlayerFormHistory(player);
-        if (formHistory.size() > 1 && isFormEqual(getPlayerForm(player), formHistory.get(formHistory.size() - 1))) {
+        if (formHistory.size() > 1 && isFormEqual(getPlayerForm(player), formHistory.getLast())) {
             return formHistory.get(formHistory.size() - 2);
         }
         return null;
@@ -82,7 +83,7 @@ public class FormUtils {
 
     public static void ensureHistoryCurrent(PlayerEntity player) {
         List<IForm> formHistory = getPlayerFormHistory(player);
-        if (!formHistory.isEmpty() && !isFormEqual(getPlayerForm(player), formHistory.get(formHistory.size() - 1))) {
+        if (!formHistory.isEmpty() && !isFormEqual(getPlayerForm(player), formHistory.getLast())) {
             formHistory.clear();
             ShapeShifterCurseFabric.LOGGER.warn("Player " + player.getName().getString() + " form history data error. clear form history data.");
             savePlayerFormHistory(player);
@@ -146,8 +147,8 @@ public class FormUtils {
         IForm prevForm = form._getPrevForm(player, reason);
         _setForm(player, prevForm);
         List<IForm> formHistory = getPlayerFormHistory(player);
-        if (formHistory.size() > 1 && isFormEqual(formHistory.get(formHistory.size() - 1), form) && isFormEqual(formHistory.get(formHistory.size() - 2), prevForm)) {
-            formHistory.remove(formHistory.size() - 1);
+        if (formHistory.size() > 1 && isFormEqual(formHistory.getLast(), form) && isFormEqual(formHistory.get(formHistory.size() - 2), prevForm)) {
+            formHistory.removeLast();
         } else {
             formHistory.clear();
             ShapeShifterCurseFabric.LOGGER.warn("Player " + player.getName().getString() + " prev form data error. clear prev form data.");
